--- a/page.css
+++ b/page.css
@@ -1,110 +1,115 @@
+/* Improved CSS */
+
+:root {
+    --header-bg: #444;
+    --footer-bg: #000;
+    --footer-text: #fff;
+    --main-bg: #fff;
+    --chatbot-bg: #f5f5f5;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body.tank {
-    background: url("images/classes.jpg");
-    background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-position: top center;
-	font-family: Verdana, Arial;
-	color: black;
-	margin: 0 auto;
-	padding: 0;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	font-family: Verdana,Arial;
-	color: black;
-	margin: 0 auto;
-	box-sizing: inherit;
-	font-size: 15px;
+    background: url("images/classes.jpg") no-repeat top center fixed;
+    background-size: cover;
+    font-family: Verdana, Arial, sans-serif;
+    color: #111;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
     line-height: 1.5;
-	-webkit-text-size-adjust: 100%;
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
-	box-shadow: 0px 3px 3px black;
-	margin: 0px 0px 20px 0px;
-	min-width: 100%;
-	min-height: max-content;
-	max-height: 20hv;
-	padding: 0px 0px 10px 0px;
-	border: 1px solid black;
-	box-sizing: border-box;
-	text-size-adjust: 100%;
-	background-color: grey;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+    margin-bottom: 20px;
+    width: 100%;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid #222;
+    background-color: var(--header-bg);
+    color: #fff;
 }
 
-h1,h2 {
-	text-size-adjust: 100%;
+h1, h2 {
+    margin: 0.5em 0;
 }
 
 div.chatbot-container {
-	background-color: #f5f5f5;
+    background-color: var(--chatbot-bg);
 }
 
 main.chat-container {
-	background-color: #fff;
-	border-radius: 5px;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-	align-items: center;
-	margin-bottom: 10px;
-	border-radius: 5px;
-	font-size: 16px;
-	word-wrap: break-word;
-	flex: 1;
-    overflow-y: scroll;
-	padding: 7px 7px 7px 7px;
-	margin-bottom: 2vh;
-	min-width: max-content;
-	max-width: max-content;
-	min-height: max-content;
-	max-height: max-content;
+    background-color: var(--main-bg);
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    align-items: center;
+    font-size: 16px;
+    word-wrap: break-word;
+    flex: 1;
+    overflow-y: auto;
+    padding: 1em;
+    margin: 2em auto;
+    min-width: 300px;
+    max-width: 1000px; /* Increased max-width for more space */
+    min-height: 100px;
+    max-height: 80vh;
+    display: flex;
+    justify-content: center;
 }
 
 iframe {
-	min-height: 60vh;
-	max-height: 80vh;
-	min-width: 70vw;
-	max-width: 100%;
+    width: 100%;
+    height: 70vh;
+    min-width: 0;
+    max-width: none;
+    min-height: 0;
+    max-height: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    display: block;
 }
 
 img.loger {
-	max-height: 115px;
-	max-width: 121px;
-	float: left;
-	border: 1.5px solid black;
+    max-height: 115px;
+    max-width: 121px;
+    float: left;
+    border: 1.5px solid #222;
+    background: #fff;
+    border-radius: 8px;
+    margin-right: 1em;
 }
 
 h1.liner {
-	text-align: center;
+    text-align: center;
 }
 
 footer {
-	box-shadow: 0px 3px 3px black;
-	margin: 0 auto;
-	min-height: 10vh;
-	min-width: 100%;
-	padding: 0 auto;
-	position: static;
-	bottom: 0;
-	margin-bottom: -0.5vh;
-	padding-bottom: -0.5vh;
-	margin-top: 0.5vh;
-	box-shadow: 0px 3px 3px black;
-	text-align: center;
-	background-color: #000000;
-	text-align: center;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+    min-height: 10vh;
+    width: 100%;
+    padding: 10px 0;
+    margin-top: 0.5vh;
+    text-align: center;
+    background-color: var(--footer-bg);
+    color: var(--footer-text);
 }
 
 div.copier {
-	background-color: black;
-	color: white;
-	text-align: center;
-	font-size: 3.5vh;
-	margin-top: 10hv;
-	margin-bottom: -100vh;
-	padding-bottom: -100vh;
+    background-color: var(--footer-bg);
+    color: var(--footer-text);
+    text-align: center;
+    font-size: 3.5vh;
+    margin-top: 10vh;
+    padding-bottom: 20px;
 }
 
